Basic Structures created basic structure of the table for the web application. I decided to use a table as it makes the most sense for the application I am building.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,9 @@
-body {
-    height: 100vh;
-    background-color: blue;
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.tableHeader {
+    padding: 10px;
+    background-color: rgba(0, 143, 105, 0.553);
 }
